--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-      <li><a href="../js-experiments/index.html">js-experiments</a></li>
+      <li><a href="../JS-experiments/index.html">js-experiments</a></li>
     </ul>
 </body>
 </html>
